[package]
name = "bevy_atelier"
version = "0.2.0"
edition = "2018"
authors = ["Bevy Contributors <bevyengine@gmail.com>", "Carter Anderson <mcanders1@gmail.com>"]
description = "Provides asset functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0", features = ["bevy"] }
bevy_reflect_derive = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0" }

# other
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0.118", features = ["derive"] }
crossbeam-channel = "0.4.2"
anyhow = "1.0"
thiserror = "1.0"
notify = { version = "5.0.0-pre.2", optional = true }
parking_lot = "0.10.2"
atelier-importer = { git = "https://github.com/alec-deason/atelier-assets.git" }
atelier-daemon = { git = "https://github.com/alec-deason/atelier-assets.git", optional=true }
atelier-loader = { git = "https://github.com/alec-deason/atelier-assets.git", features = ["bevy_reflect_impls"], branch = "bevy_reflect" }
atelier-core = { git = "https://github.com/alec-deason/atelier-assets.git", features = ["type_uuid"] }
type-uuid = "0.1.2"
image2 = { version = "0.11.3", features = ["ser"] }
futures-io = "0.3.8"
futures-core = "0.3.8"
futures-util = "0.3.8"
bincode = "1.3.1"

[features]
default = ["assets-daemon"]
assets-daemon = ["atelier-daemon"]
