[package]
name = "load_a_thing"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", version = "0.4.0" }
bevy_atelier = { path = "../.." }
atelier-loader = { git = "https://github.com/alec-deason/atelier-assets.git", branch = "bevy_reflect" }

[features]
atelier-daemon-headless = []
